getTasksByComplete() transfer to SQL
