# docs/swagger.json
@@ -39,7 +39,32 @@
                 "responses": {}
             }
         },
-        "/tasks/{id}": {
+        "/tasks/complete/{complete}": {
+            "get": {
+                "description": "Gets all tasks with specified \"complete\" value",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "getTasksByComplete",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "Complete? true or false",
+                        "name": "complete",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/tasks/id/{id}": {
             "get": {
                 "description": "Gets all tasks with specified ID",
                 "consumes": [
