# main.go
@@ -26,10 +26,11 @@ func main() {
 
 	router.GET("/health", getHealth)
 	router.GET("/tasks", getTasks)
-	router.GET("/tasks/:id", getTaskByID)
+	router.GET("/tasks/id/:id", getTaskByID)
+	router.GET("/tasks/complete/:complete", getTasksByComplete)
 	router.POST("/tasks", postTask)
-	router.PUT("/tasks/:id", putTasks)
-	router.DELETE("/tasks/:id", deleteTaskByID)
+	router.PUT("/tasks/id/:id", putTasks)
+	router.DELETE("/tasks/id/:id", deleteTaskByID)
 
 	router.Run("localhost:8080")
 }
